--- a/PetProject++/src/main/resources/templates/mascotas-encontradas.hbs
+++ b/PetProject++/src/main/resources/templates/mascotas-encontradas.hbs
@@ -9,7 +9,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="./css/main.css">
-    <script src="js/mascotas-encontradas.js"></script>
+    <link rel="stylesheet" href="./css/modal.css">
+    <script src="./js/mascotas-encontradas.js"></script>
     <title>Diseño de sistemas</title>
   </head>
   <body>
@@ -356,7 +357,7 @@
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script> 
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
-    <script src="main.js"></script>
+    <script src="./main.js"></script>
      <div class="pop-up verModal" id='popUp'>
     <div class="pop-wrap">
       <div class="pop-mensaje">
