--- a/PetProject++/src/main/resources/templates/perfil.hbs
+++ b/PetProject++/src/main/resources/templates/perfil.hbs
@@ -63,7 +63,7 @@
                         <br>
                         <div class="col-sm-6 mb-3">
                             <div class="col-sm-9 text-secondary text-center">
-                                <input  type="button" class="btn btn-secondary px-4"  style="background-color: blueviolet;" value="Agregar Mascota" >
+                                <a href="../Registrar-Mascota/{{usuario.id}}" type="button" class="btn btn-secondary px-4"  style="background-color: blueviolet;" >"Agregar Mascota"</a>
                             </div>
                         </div>
                       </div>
@@ -124,68 +124,33 @@
                         <div class="col-sm-6 mb-3">
                             <div id="carousel" class="carousel slide" data-bs-ride="carousel">
                                 <div class="carousel-inner">
-                                    {{#each usuario.mascotas}}
-                                        <div class="carousel-item" data-bs-interval="3000">
+                                    {{#each carrousel}}
+                                        <div class="carousel-item {{#if active}}active{{/if}}" data-bs-interval="3000">
                                             <div class="card">
                                                 <img
-                                                        src="data:image/png;base64,{{bytearray}}"
+                                                        src="data:image/png;base64,{{foto}}"
                                                         class="card-img-top"
                                                         alt="..."
                                                         height="300"
                                                 />
                                                 <div class="card-body">
-                                                    {{#if descripcionFisica}}
-                                                        <h5 class="card-title">{{nombre}}</h5>
+                                                    {{#if mascota.descripcionFisica}}
+                                                        <h5 class="card-title">{{mascota.nombre}}</h5>
                                                         <p class="card-text">
-                                                            {{descripcionFisica}}
+                                                            {{mascota.descripcionFisica}}
                                                         </p>
                                                     {{else}}
-                                                        <h5 class="card-title mb-4">{{nombre}}</h5>
+                                                        <h5 class="card-title mb-4">{{mascota.nombre}}</h5>
                                                         <br>
                                                     {{/if}}
                                                     <a href="#!" class="btn btn-secondary"  style="background-color: blueviolet;">Editar</a>
-                                                    <a href="../Dar-en-Adopcion/{{id}}" class="btn btn-secondary"  style="background-color: blueviolet;">Dar en Adopcion</a>
+                                                    <a href="../Dar-en-Adopcion/{{mascota.id}}" class="btn btn-secondary"  style="background-color: blueviolet;">Dar en Adopcion</a>
                                                     <a href="#!" class="btn btn-secondary"  style="background-color: blueviolet;">Mostrar QR</a>
                                                 </div>
                                             </div>
                                         </div>
                                     {{/each}}
 
-                                  <div class="carousel-item active" data-bs-interval="3000">
-                                      <div class="card">
-                                          <img
-                                                  src="../img/TomHanks/Pantufla.jpg!d"
-                                                  class="card-img-top"
-                                                  alt="..."
-                                                  height="300"
-                                          />
-                                          <div class="card-body">
-                                              <h5 class="card-title">Pantufla</h5>
-                                              <p class="card-text">
-                                                  Gata, Hembra, castrada, 3 años
-                                              </p>
-                                              <a href="#!" class="btn btn-secondary"  style="background-color: blueviolet;">Editar</a>
-                                          </div>
-                                      </div>
-                                  </div>
-                            
-                                  <div class="carousel-item" data-bs-interval="3000">
-                                    <div class="card">
-                                        <img
-                                          src="../img/TomHanks/Amelie.jpg"
-                                          class="card-img-top"
-                                          alt="..."
-                                          height="300"
-                                        />
-                                        <div class="card-body">
-                                          <h5 class="card-title">Amélie</h5>
-                                          <p class="card-text">
-                                            Gata, Hembra, castrada, 6 años
-                                          </p>
-                                          <a href="#!" class="btn btn-secondary"  style="background-color: blueviolet;">Editar</a>
-                                        </div>
-                                      </div>
-                                  </div>
                                 </div>
                                 <button class="carousel-control-prev" type="button" data-bs-target="#carousel"  data-bs-slide="prev">
                                   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
