--- a/PetProject++/src/main/resources/templates/registrarMascota.hbs
+++ b/PetProject++/src/main/resources/templates/registrarMascota.hbs
@@ -9,9 +9,9 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="./css/main.css">
-    <link rel="stylesheet" href="./css/registrarMascota.css">
-    <script src="./js/registrarMascota.js"></script>
+    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/registrarMascota.css">
+    <script src="../js/registrarMascota.js"></script>
     <script src="https://kit.fontawesome.com/7fcb757e78.js" crossorigin="anonymous"></script>
     <title>Diseño de sistemas</title>
 </head>
@@ -21,9 +21,9 @@
         <!--========================================================== -->
         <!-- ENCABEZADO -->
         <!--========================================================== -->
-        <nav class="navbar navbar-expand-lg navbar-light p-3" id="menu" style="background-image: url('img/banner.PNG');  height: 110px">
+        <nav class="navbar navbar-expand-lg navbar-light p-3" id="menu" style="background-image: url('../img/banner.PNG');  height: 110px">
             <a class="navbar-brand" rel="home" href="../Inicio">
-                <img style="max-width:100px;" src="./img/Logo/negro2.png">
+                <img style="max-width:100px;" src="../img/Logo/negro2.png">
             </a>
             <div class="container">
                 <a class="navbar-brand" href="../Inicio">
@@ -44,7 +44,7 @@
                             <a class="nav-link" href="../Inicio#intro">Sistema</a>
                         </li>
                     </ul>
-                    <a href="perfil.html" class="nav-item nav-link" aria-expanded="false"><img src="img/Avatar/avatar-gato.png" class="avatar" alt="Avatar" height="50" width="50"><b class="fs-5 text-dark fw-bold">Tom Hanks</b></a>
+                    <a href="../Perfil/{{duenioId}}" class="nav-item nav-link" aria-expanded="false"><img src="../img/Avatar/avatar-gato.png" class="avatar" alt="Avatar" height="50" width="50"><b class="fs-5 text-dark fw-bold">Tom Hanks</b></a>
                 </div>
             </div>
         </nav>
@@ -56,7 +56,7 @@
         <h1>Registro de Mascota</h1>
         <div class="row mt-4">
             <div class="col-12">
-                <form action="../pets" method="post" id="formulario" enctype="multipart/form-data">
+                <form action="../pets/{{duenioId}}" method="post" id="formulario" enctype="multipart/form-data">
                     <div class="row">
                         <div class="col-6">
                             <div class="row mb-4">
